--- a/Models/Diffusion/2024.06.27_DEX-TTS.md
+++ b/Models/Diffusion/2024.06.27_DEX-TTS.md
@@ -49,9 +49,9 @@ Audio samples are available at https://dextts.github.io/demo.github.io/
 
 ## 1.Introduction: 引言
 
-Text-to-Speech (TTS) ([WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md); [Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md)) is the task of synthesizing natural speech from a given text, which is applied to various applications such as voice assistant services.
-To generate diverse and high-fidelity speech, researchers have studied Transformer \cite{li2019neural}-, GAN \cite{[Parallel WaveGAN](../../Models/TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md), yang2021ganspeech}-, and normalizing flow ([Flow-TTS](../../Models/TTS2_Acoustic/2020.05.04_Flow-TTS.md); [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md))-based TTS as deep generative models.
-Recently, with the success of diffusion models in various generative tasks \cite{ho2020denoising, ho2022imagen, schneider2023archisound}, researchers have shifted their focus to diffusion-based TTS ([DiffWave](../../Models/TTS3_Vocoder/2020.09.21_DiffWave.md); [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), liu2022diffgan) and proved the outstanding performance of diffusion models in TTS as well.
+Text-to-Speech (TTS) ([WaveNet](../Vocoder/2016.09.12_WaveNet.md); [Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech](../../Models/Acoustic/2019.05.22_FastSpeech.md)) is the task of synthesizing natural speech from a given text, which is applied to various applications such as voice assistant services.
+To generate diverse and high-fidelity speech, researchers have studied Transformer \cite{li2019neural}-, GAN \cite{[Parallel WaveGAN](../Vocoder/2019.10.25_Parallel_WaveGAN.md), yang2021ganspeech}-, and normalizing flow ([Flow-TTS](../Acoustic/2020.04.09_Flow-TTS.md); [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md deep generative models.
+Recently, with the success of diffusion models in various generative tasks \cite{ho2020denoising, ho2022imagen, schneider2023archisound}, researchers have shifted their focus to diffusion-based TTS ([DiffWave](../Vocoder/2020.09.21_DiffWave.md); [Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md); [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), liu2022diffgan) and proved the outstanding performance of diffusion models in TTS as well.
 
 Despite the improvement of the above general TTS studies, synthesizing human-like speech remains challenging due to the lack of expressiveness of synthesized speech such as the limited styles of reading, prosody, and emotion \cite{tan2021survey}.
 Since expressiveness can be reflected during synthesizing acoustic features such as mel-spectrograms, acoustic models have been investigated for expressive TTS.
@@ -74,7 +74,7 @@ However, problems such as complicated pipelines, additional label requirements, 
 Another focus of this study is designing a strong TTS backbone, which is a component of expressive TTS, to obtain superior expressive TTS.
 We investigate diffusion-based TTS since it can synthesize high-quality speech through iterative denoising processes.
 Furthermore, we expect that style information can be effectively reflected by iteratively incorporating style information during the denoising process.
-A few studies ([Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md); [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md)) on diffusion-based TTS have improved TTS performance by adapting diffusion formulations to suit TTS.
+A few studies ([Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md); [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md); [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md)) on diffusion-based TTS have improved TTS performance by adapting diffusion formulations to suit TTS.
 However, the network of these studies was confined to simple U-Net, leading to limited latent representations.
 Although [U-DiT TTS](../../Models/Diffusion/2023.05.22_U-DiT_TTS.md) used [DiT](2022.12.19_DiT.md) for the diffusion network, DiT is yet to be effectively leveraged for TTS.
 
@@ -102,7 +102,7 @@ The results on the single-speaker dataset demonstrate the superior performance o
 <summary>原文</summary>
 
 As diffusion models in image synthesis have proven their outstanding performance \cite{ho2020denoising, song2020score, karras2022elucidating}, researchers have studied diffusion-based TTS.
-[Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md), [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), and [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md) properly utilized diffusion methods for TTS.
+[Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md), [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), and [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md) properly utilized diffusion methods for TTS.
 Although they effectively applied diffusion formulation for TTS, diffusion networks in previous studies were limited to U-Net architectures.
 It led to limited latent representations, indicating the necessity of improvement in the diffusion network design.
 [U-DiT TTS](../../Models/Diffusion/2023.05.22_U-DiT_TTS.md) improved the design of diffusion networks in TTS by adopting [DiT](2022.12.19_DiT.md) blocks while retaining some aspects of U-Net down- and up-sampling.
@@ -114,7 +114,7 @@ In our work, we adopt an overlapping patchify and convolution-frequency patch em
 <br>
 
 由于扩散模型在图像合成领域已经证明了其卓越的性能, 研究人员开始研究基于扩散模型的文本转语音技术.
-[Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md), [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md) 等模型恰当地利用了扩散方法进行文本转语音.
+[Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md), [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md) 等模型恰当地利用了扩散方法进行文本转语音.
 尽管它们有效地应用了扩散公式进行文本转语音, 但先前研究中的扩散网络主要局限于 U-Net 架构.
 这局限了隐表示, 表明扩散网络设计有待改进的必要.
 [U-DiT TTS](../../Models/Diffusion/2023.05.22_U-DiT_TTS.md) 通过采用 [DiT](2022.12.19_DiT.md) 模块, 同时保留 U-Net 下采样和上采样的部分, 改进了文本转语音中扩散网络的设计.
@@ -195,7 +195,7 @@ T-IV 风格包含全局信息, 而 T-V 风格包含随时间变化的信息, 如
 另一方面, 为了保留 T-V 编码器从参考语音中提取的时变表示 $h^{d}_{v}$, 扩散解码器中的 T-V 适配器考虑时间轴反射表示.
 此外, T-V 编码器将表示 $h^{e}_{v}$ 传递给文本编码器, 因为文本表示随时间变化.
 
-#### Text Encoder: 文本编码器 ([代码](../../CodeReviews/2024.05.14_DEX-TTS/Code/DEX-TTS/model/text_encoder.py))
+#### Text Encoder: 文本编码器
 
 <details>
 <summary>原文</summary>
@@ -204,7 +204,7 @@ Given the input phonemes, the text encoder extracts the text representation $h_{
 The text encoder consists of 8 layers, each composed of [Transformer](../_Transformer/2017.06.12_Transformer.md) encoder structure that includes Multi-Head Self-Attention (MHSA) and Feed-Forward Network (FFN).
 To enhance the encoder, we incorporate relative position embedding, [RoPE](../_Transformer/2021.04.20_RoFormer.md), into the attention mechanism and apply the swish gate used in [RetNet](../_Transformer/2023.07.17_RetNet.md) after the attention operation.
 Since text varies over time, $h^{e}_{v}$, defined as T-V styles, can be effectively utilized to condition styles for $h_{text}$.
-We utilize [Adaptive Layer Normalization (AdaLN)](../../Models/TTS2_Acoustic/2021.03.01_AdaSpeech.md) after each MHSA and FFN to inject $h^{e}_{v}$, extracted by the T-V encoder given a reference input, into $h_{text}$.
+We utilize [Adaptive Layer Normalization (AdaLN)](../Acoustic/2021.03.01_AdaSpeech.md) after each MHSA and FFN to inject $h^{e}_{v}$, extracted by the T-V encoder given a reference input, into $h_{text}$.
 See Section \ref{sec:appendix-text encoder} for more details.
 
 </details>
@@ -222,14 +222,14 @@ See Section \ref{sec:appendix-text encoder} for more details.
 <details>
 <summary>原文</summary>
 
-We adopt a convolution-based Duration Predictor (DP) ([Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md)) in which $h_{text}$ extracted by the text encoder is used.
+We adopt a convolution-based Duration Predictor (DP) ([Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md{text}$ extracted by the text encoder is used.
 DP predicts the duration $\hat{d}$ which maps $h_{text}$ to frames of the mel-spectrogram for the initial mel-spectrogram representation $h_{mel}$ used as the condition input in the diffusion decoder.
 Aligner is trained by the Monotonic Alignment Search (MAS) algorithm.
 
 </details>
 <br>
 
-我们采用 [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md) 中基于卷积的时长预测器, 其中 $h_{text}$ 由文本编码器提取得到.
+我们采用 [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md其中 $h_{text}$ 由文本编码器提取得到.
 时长预测器预测时长 $\hat{d}$, 这将 $h_{text}$ 映射到初始梅尔频谱表示 $h_{mel}$ 的相应帧, 之后作为扩散解码器的条件输入.
 对齐器由单调对齐搜索算法进行训练.
 
@@ -240,7 +240,7 @@ Here, the initial mel-spectrogram representation $h_{mel}$ and styles $h_{inv, v
 For diffusion representation $h_{diff}$, we concatenate $x_{t}$, $h_{mel}$, and $t$, and pass it to the diffusion decoder, where $t$ is projected by sinusoidal encoding and linear layers.
 >
 The diffusion decoder comprises convolution blocks, adapters, and [DiT](2022.12.19_DiT.md) blocks.
-To leverage powerful denoising in the latent space, we utilize up and down convolution blocks, as in [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), to decrease and increase the resolution of $h_{diff}$.
+To leverage powerful denoising in the latent space, we utilize up and down convolution blocks, as in [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), to decrease and increase the resolution of $h_{diff}$.
 In the bottleneck, each adapter incorporates $h_{inv, v}$ into $h_{diff}$ to reflect each style information.
 Furthermore, we forward $t$ as an additional condition into adapters to effectively reflect styles during the iterative denoising process.
 >
@@ -352,7 +352,7 @@ It maintains instance-level features for computing attention scores and enables 
 
 ### 3.5.Loss Function
 
-To train ***DEX-TTS***, we follow the loss formulation of previous diffusion-based TTS studies ([Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md); [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md)), in which duration loss $\mathcal{L}_{dur}$, prior loss $\mathcal{L}_{prior}$, and diffusion loss $\mathcal{L}_{diff}$ are used. $\mathcal{L}_{dur}$ is utilized to train DP that predicts the duration mapping $h_{text}$ to mel frames, and it is defined as $||log(d)-log(\hat{d})||_{2}^{2}$.
+To train ***DEX-TTS***, we follow the loss formulation of previous diffusion-based TTS studies ([Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md); [CoMoSpeech](../../Models/Diffusion/2023.05.11_CoMoSpeech.md)), in which duration loss $\mathcal{L}_{dur}$, prior loss $\mathcal{L}_{prior}$, and diffusion loss $\mathcal{L}_{diff}$ are used. $\mathcal{L}_{dur}$ is utilized to train DP that predicts the duration mapping $h_{text}$ to mel frames, and it is defined as $||log(d)-log(\hat{d})||_{2}^{2}$.
 The duration label $d$ is obtained by MAS algorithm.
 Given $x$ is the ground-truth mel-spectrogram, $\mathcal{L}_{prior}$ calculates the loss between the initial mel-spectrogram $h_{mel}$ from the aligner and $x$ for stable learning, defined as $||h_{mel}-x||_{2}^{2}$.
 To train the diffusion decoder (Denoiser $D_{\theta}$), we use a denoising error for each timestep $t$, defined as follows:
@@ -392,7 +392,7 @@ For comparison, we set the following systems as baselines:
 - (3) [YourTTS](../../Models/E2E/2021.12.04_YourTTS.md), VITS-based zero-shot multi-speaker TTS with the pre-trained speaker encoder.
 - (4) [GenerSpeech](../TTS2_Acoustic/2022.05.15_GenerSpeech.md), style transfer method for out-of-domain TTS.
 - (5) [StyleTTS](../../Models/TTS2_Acoustic/2022.05.30_StyleTTS.md), style-based TTS with transferable aligner and AdaIN.
-Except for YourTTS (end-to-end TTS), the generated mel-spectrograms are transformed into waveforms by the pre-trained [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
+Except for YourTTS (end-to-end TTS), the generated mel-spectrograms are transformed into waveforms by the pre-trained [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md).
 We record the performance of the baselines after training with their codes.
 
 #### Implementation Details
@@ -470,7 +470,7 @@ As discussed in Section \ref{sec:intro}, another focus of this study is designin
 We improved diffusion-based TTS via overlapping patch strategy and conv-freq embedding, which enables the comprehensive utilization of DiT.
 To investigate the improvements in our diffusion network, we conduct experiments for general TTS which does not use reference speech.
 We eliminate the modules dependent on reference (See Section \ref{sec:appendix-GeDEX-TTS} for details), thus the model can operate as general TTS and we call this version ***General DEX-TTS (GeDEX-TTS)***.
-For comparison, we select previous diffusion-based TTS models and train models on a single-speaker dataset, [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md), following the set split of [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md).
+For comparison, we select previous diffusion-based TTS models and train models on a single-speaker dataset, [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md), following the set split of [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md).
 FastSpeech2 is adopted for comparison since it is a popular baseline model in general TTS.
 We consider 2000 epochs and $P$ of 4 for ***GeDEX-TTS*** and other training settings are the same as ***DEX-TTS***.
 For inference, we use the NFE of 50 with Euler solver for all diffusion models.
