--- a/Models/SpeechLM/2024.12.20_SLAM-Omni.md
+++ b/Models/SpeechLM/2024.12.20_SLAM-Omni.md
@@ -81,6 +81,27 @@ Results on a larger dataset demonstrates its multilingual and multi-round dialog
 
 ## 2·Related Works: 相关工作
 
+### 2.1·End-to-End Spoken Dialogue Modeling
+
+Existing end-to-end SDMs primarily model voice interaction by treating text as either an intermediate output or a hidden state to leverage the pre-trained knowledge of LLMs.
+As illustrated in Figure~\ref{fig:SDM-modeling}, these methods can be categorized into text-driven modeling and joint audio-text modeling.
+For text-driven modeling, as shown in Figure~\ref{fig:SDM-modeling}a, existing methods \citep{fang2024llama,wang2024freeze} keep the original architecture of LLMs to retain textual abilities, using their hidden states as input to a speech decoder for audio generation.
+This approach effectively preserves LLMs knowledge but struggles to capture rich audio paralinguistic attributes such as emotion and prosody, since only text tokens are used for autoregressive modeling.
+Joint audio-text modeling, illustrated in Figure~\ref{fig:SDM-modeling}b and c, is further divided into interleaved and parallel paradigms. Both paradigms incorporate audio tokens into the autoregressive modeling, theoretically enhancing the ability to model non-verbal information.
+In the interleaved paradigm, models \citep{zhang2024omniflatten,zeng2024scaling,nguyen2024spirit} alternate between text and audio tokens during generation.
+This method typically requires extensive interleaved speech-text data and pre-training for re-modeling LLMs.
+In contrast, the parallel paradigm, adopted by models like PSLM \citep{mitsui2024pslm}, Mini-Omni \citep{xie2024mini,xie2024mini2}, and our proposed SLAM-Omni, employs autoregressive modeling of text and audio tokens in parallel.
+However, unlike PSLM and Mini-Omni, SLAM-Omni predicts single-layer grouped semantic tokens to accelerate audio generation process.
+Combining semantic group modeling with single-stage training, we achieve an end-to-end SDM built on a pre-trained LLM that requires significantly less training costs compared to previous solutions.
+
+### 2.2·Speech Tokenization
+
+Speech tokenization is a foundational technique in speech language models (SLMs), typically categorized into acoustic tokens and semantic tokens \citep{zhang2023speechgpt,borsos2023audiolm}.
+Acoustic tokens, derived from neural audio codecs \citep{defossez2022high,zeghidour2021soundstream} and optimized for reconstructing high-quality audio, have been widely adopted in SLMs for speech synthesis and editing \citep{wang2023neural,peng2024voicecraft}, as well as in SDMs for voice interaction \citep{xie2024mini,xie2024mini2,wang2024freeze}.
+In contrast, semantic tokens are obtained by discretizing speech representations extracted from self-supervised speech pre-trained models \citep{hsu2021hubert,chung2021w2v}, focusing on capturing semantic content rather than acoustic detail.
+These tokens are also extensively used in SLMs \citep{an2024funaudiollm,ma2024language} and SDMs \citep{zeng2024glm,fang2024llama}.
+Among these approaches, CosyVoice \citep{du2024cosyvoice} leverages supervised semantic tokens to enable zero-shot TTS, demonstrating the potential of semantic tokens for timbre control. This insight inspires our work, which seeks to extend such functionality to SDMs—a promising yet underexplored direction in the field.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
