--- a/Models/SpeechLM/2024.12.20_SLAM-Omni.md
+++ b/Models/SpeechLM/2024.12.20_SLAM-Omni.md
@@ -315,3 +315,19 @@ In contrast, our experiments demonstrate that applying single-stage fine-tuning 
 This streamlined approach also eliminates the need for a separate pre-training step and more than doubles the training efficiency.
 
 ## 6·Conclusions: 结论
+
+In this work, we propose SLAM-Omni, a timbre-controllable, end-to-end spoken dialogue model with single-stage training.
+Through a novel semantic group modeling, SLAM-Omni effectively aligns audio and text modalities during audio generation, as well as accelerating both training and inference.
+Employing supervised semantic tokens to disentangle speaker information, SLAM-Omni is capable of zero-shot timbre control.
+To address the issues posed by long audio histories, we introduce historical text prompting technique, which stores dialogue history as text and uses key-value caches for efficient multi-turn inference.
+Despite limited data and only 60 GPU hours of training, SLAM-Omni surpasses previous SDMs of similar scale on text-related abilities, and exceeds all SDMs on acoustic quality and speech-text alignment.
+
+### Limitations
+
+There are two limitations to this work.
+First, while historical text prompting effectively mitigates the burden of handling long audio sequences during training and inference, it sacrifices the rich non-verbal information accumulated from previous dialogue turns.
+In certain scenarios, retaining this historical context is crucial for maintaining dialogue coherence and depth.
+Further exploration is needed to efficiently retain such information in SDMs.
+Second, although SLAM-Omni demonstrates efficient modeling for smaller-scale LLMs, extending this approach to larger LLMs remain to be explored.
+Unlike purely text-driven methods, joint audio-text modeling necessitates substantially more training data for large-scale models.
+Striking a balance between efficient audio-text joint modeling and minimizing the loss of the original LLM’s inherent knowledge remains a critical direction for future research.
