--- a/Models/SpeechCodec/2024.12.16_SECodec.md
+++ b/Models/SpeechCodec/2024.12.16_SECodec.md
@@ -88,3 +88,9 @@ This approach significantly enhances the quality of information in the speech to
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
+
+Interacting with LLMs through speech has led to an increased demand for effective speech representation discretization.
+To address this, we propose SECodec, which can automatically determines the appropriate codebook size and integrates structural information into the quantization process.
+Extensive experiments demonstrate that SECodec outperforms EnCodec in speech reconstruction.
+Furthermore, we developed a Structural Entropy-based Speech Language Model (SESLM) that leverages SECodec, yielding superior results in terms of generated speech content accuracy and quality.
+Additionally, the experiments show that SECodec is capable of learning a more compressive and discrete codebook and producing more informative speech tokens.
