--- a/Models/SpeechCodec/2024.12.16_SECodec.md
+++ b/Models/SpeechCodec/2024.12.16_SECodec.md
@@ -79,7 +79,53 @@ To the best of our knowledge, we are the first to apply structural entropy (SE) 
 This approach significantly enhances the quality of information in the speech tokens.
 - Extensive experimental results demonstrate that SECodec performs comparably to EnCodec in speech reconstruction, while SESLM surpasses VALL-E in zero-shot text-to-speech tasks on a multi-speaker benchmark dataset.
 
-## 2·Related Works: 相关工作
+## 2·Preliminary: 预备知识
+
+Structural entropy (SE)~\cite{li2016structural} is defined as the minimum number of bits to encode the vertex that is accessible with a step of random walk on a graph.
+SE is a measurement of graph complexity by encoding tree structures via characterizing the uncertainty of the hierarchical topology of graphs.
+The structural entropy of graph $G$ is defined on an associated encoding tree $\mathcal{T}$, revealing the amount of uncertainty that remained in $G$ after encoded by $\mathcal{T}$.
+Through structural entropy minimization, the optimized hierarchical clustering result of vertices in $G$ is retained by $\mathcal{T}$.
+We present the formal definitions of encoding tree and SE as follows.
+
+### Definition 1
+
+Let $G=(V,E,W)$ be an undirected weighted graph, where $V=\{v_1,...,v_n\}$ is the vertex set, $E$ is the edge set, and $W \in R^{n \times n}$ is the edge weight matrix.
+
+1) \textit{The encoding tree $\mathcal{T}$ of $G$ is a hierarchical rooted tree where each tree
+node $\alpha$ associates with a vertex set $T_{\alpha}$.}
+
+2) \textit{The root node $\lambda$ of
+$\mathcal{T}$ associates with $T_{\lambda}=V$ and each leaf node $v$ associates with $T_v$ containing a vertex in $V$.}
+
+3) \textit{For each non-leaf
+node $\alpha \in \mathcal{T}$, the successors of $\alpha$ are associated with disjoint vertex subsets, and the union of these subsets is $T_{\alpha}$.}
+
+### Definition 2
+
+The structural entropy of $G$ given by $\mathcal{T}$ is defined as follows:
+
+$$
+\mathcal{H}^{\mathcal{T}}(G)=\sum_{\alpha \in \mathcal{T},\alpha \neq \lambda}\mathcal{H}^{\mathcal{T}}(G;\alpha)=\\ \sum_{\alpha \in \mathcal{T},\alpha \neq \lambda}-\frac{g_{\alpha}}{\mathcal{V}_G}log_2\frac{\mathcal{V}_{\alpha}}{\mathcal{V}_{{\alpha}^-}},
+$$
+
+where $\mathcal{H}^{\mathcal{T}}(G;\alpha)$ is the assigned structural entropy of $\alpha$, $g_{\alpha}$ is the cut, i.e., the sum of edge weights between vertices in and not in $T_{\alpha}$, $\mathcal{V}_{\alpha}$ and $\mathcal{V}_{G}$ are the volumes, i.e., the sum of vertex degrees in $T_{\alpha}$ and $G$, respectively.
+The structural entropy of $G$ is defined as $\mathcal{H}(G)=\mathop{\min}_{\mathcal{T}} \{ \mathcal{H}^{\mathcal{T}}(G) \},$
+
+where $\mathcal{T}$ ranges over all possible encoding trees.
+The vertex sets associated with tree nodes form a clustering of vertices in $V$.
+
+### Definition 3
+
+The $K$-D structural entropy is the structural entropy given by the encoding trees with the height of at most $K$.
+When $K=2$, the encoding tree represents graph partitioning, which can be used to perform partitioning clustering.
+A $2$-D encoding tree $\mathcal{T}$ can be formulated as a graph partitioning $\mathcal{P}=\{ \mathcal{X}_1,\mathcal{X}_2,...,\mathcal{X}_L\}$ of $V$ , where $\mathcal{X}_i$ is a vertex subset called module associated with the $i$-th children of root $\lambda$.
+The structural entropy of $G$ given by $\mathcal{P}$ is defined as:
+
+$$
+\mathcal{H}^{\mathcal{P}}(G)=-\sum_{\mathcal{X} \in \mathcal{P}}\sum_{v_i \in \mathcal{X}}\frac{g_i}{\mathcal{V}_G}log_2\frac{d_i}{\mathcal{V}_\mathcal{X}}\\ -\sum_{\mathcal{X} \in \mathcal{P}}\frac{g_\mathcal{X}}{\mathcal{V}_G}log_2\frac{\mathcal{V}_\mathcal{X}}{\mathcal{V}_G},
+$$
+
+where $d_i$ is the degree of vertex $v_i$, $g_i$ is the cut, i.e., the sum of edge weights connecting $v_i$ and other vertices, $\mathcal{V}_\mathcal{X}$ and $\mathcal{V}_G$ are the volumes, i.e., the sum of vertex degrees in module $\mathcal{X}$ and graph $G$, respectively, and $g_\mathcal{X}$ is the cut, i.e., the sum of edge weights between vertices in and not in module $\mathcal{X}$.
 
 ## 3·Methodology: 方法
 
